feat: setup app skeleton and theme switching

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PeerMart</title>
+    <link id="theme-link" rel="stylesheet" href="/assets/themes/lara-light-blue.css" />
   </head>
   <body>
     <div id="root"></div>
